@@ -1,6 +1,12 @@
 2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
+	(drawArc): Implemented,
+	(fillArc): Likewise.
+
+2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
 	(drawOval): Implemented,
 	(fillOval): Likewise.
 
